--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-preloaders": "^3.0.3",
+    "react-reveal": "^1.2.2",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
@@ -16,7 +18,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": " 7.21.11"
-  },  
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
