--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-reveal": "^1.2.2",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
